# pytest-querys

./: README.md  pyproject.toml
src/: category.py  inventory.py
src/pytest_query/queries/: http.py
src/pytest_querys/: fixtures.py
src/pytest_querys/core/: category.py  inventory.py  manger.py  registry.py
src/pytest_querys/querys/: __init__.py  http.py
src/querys/: http.py
test/: test_fist.py
