[project]
name = "pytest-querys"
version = "1.0.0"
description = "A service query management tool for web services, databases, and other connections"
authors = [
    { name = "lanmao", email = "biglanmao@outlook.com" },
]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["web-service", "database", "redis", "postgres", "ftp"]
classifiers = []
dependencies = [
    "PyYAML>=6.0",
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
docs = []
test = []


[project.urls]
Homepage = "https://github.com/biglanmao/pytest-querys"
Documentation = "https://biglanmao.github.io/pytest-querys"
Repository = "https://github.com/biglanmao/pytest-querys"
Issues = "https://github.com/biglanmao/pytest-querys/issues"

[project.scripts]
# web-service-manager = "web_service_manager.cli:main"

[project.entry-points."manger.querys.pytest_querys"]
http_api_server = "pytest_querys.querys.http:HttpQueryManger"

[project.entry-points."query.querys.pytest_querys"]


[project.entry-points."session.querys.pytest_querys"]

[project.entry-points."pytest11"]
pytest-querys = "pytest_querys.plugin"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
#include = ["web_service_manager*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]

# Black code formatter configuration
[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  | \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["web_service_manager"]

# flake8 configuration
[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "build", "dist", "*.egg-info"]

# mypy configuration
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

## pytest configuration
#[tool.pytest.ini_options]
#testpaths = ["tests"]
#addopts = [
#    "--verbose",
#    "--color=yes",
#    "--strict-markers",
#    "--strict-config",
#]
#markers = [
#    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
#    "integration: marks tests as integration tests",
#]
#filterwarnings = [
#    "error",
#    "ignore::DeprecationWarning",
#]
#
## Coverage configuration
#[tool.coverage.run]
#source = ["src/web_service_manager"]
#omit = [
#    "*/tests/*",
#    "*/test_*",
#    "*/__pycache__/*",
#]
#
#[tool.coverage.report]
#exclude_lines = [
#    "pragma: no cover",
#    "def __repr__",
#    "if self.debug:",
#    "if settings.DEBUG",
#    "raise AssertionError",
#    "raise NotImplementedError",
#    "if 0:",
#    "if __name__ == .__main__.:",
#    "class .*\\bProtocol\\b":,
#]
#
## Package specific configuration
#[tool.web-service-manager]
#default_config_file = "service_inventory.yaml"
#log_level = "INFO"
#timeout = 30
#
#[tool.web-service-manager.database]
#default_timeout = 10
#max_connections = 20
#
#[tool.web-service-manager.web]
#user_agent = "WebServiceManager/1.0.0"
#max_retries = 3